--- a/app/src/main/res/drawable/shape_rounded_landing_language.xml
+++ b/app/src/main/res/drawable/shape_rounded_landing_language.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/skyBlueStatic" />
+    <solid android:color="@color/skyBlue" />
 
     <corners android:radius="@dimen/radius_12dp" />
 
